syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.gabrielgmusskopf.grpackage.server";
option java_outer_classname = "CreatePackageProto";

package server;

service CreatePackage {
  rpc Create (CreatePackageRequest) returns (CreatePackageResponse) {}
}

message CreatePackageRequest {
  uint64 userId = 1;
  uint64 productId = 2;
  string destination = 3;
}

message CreatePackageResponse {
  uint64 id = 1;
  uint64 userId = 2;
  uint64 productId = 3;
  string destination = 4;
  string deliveredDate = 5;
  string status = 6;
}
